Mother of all verbosity

--- a/cv.tex
+++ b/cv.tex
@@ -12,14 +12,11 @@
 
 \usepackage{scrpage2} % Provides headers and footers configuration
 
-\usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors
-
-% \usepackage[big]{layaureo} % Margin formatting of the A4 page, an alternative to layaureo can be \usepackage{fullpage}
-% To reduce the height of the top margin uncomment: \addtolength{\voffset}{-1.3cm}
+\usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colours
 
 \usepackage{hyperref} % Required for adding links	and customizing them
-\definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link color
-\hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour} % Set link colors throughout the document
+\definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link colour
+\hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour} % Set link colours throughout the document
 
 \usepackage{tabularx,colortbl} % Advanced table configurations
 \usepackage{array} % Custom arrangement for the columns
@@ -62,8 +59,8 @@
 }
 
 \newcommand{\lproject}[4]{
-    \begin{tabular}{p{0.85\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{#1}}\\
+    \begin{tabular}{p{0.80\linewidth}r}
+        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{4cm}}{\raggedleft \textsc{#1}}\\
         #3
     \end{tabular}
     \begin{tabular}{p{\linewidth}}
@@ -131,7 +128,7 @@
                 \addfontfeature{LetterSpace=20.0}\fontsize{24}{24}\selectfont\scshape
                 Srijan R. Shetty
             }\\
-            \hspace{0.15cm} \emph{Deptarment of Computer Science and Engineering}
+            \hspace{0.15cm} \emph{Department of Computer Science and Engineering}
         }
 
         & {\Large\Mobilefone} +(91) 9005900383 \\
@@ -158,10 +155,10 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.5/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
 
-    \textsc{Jul 2011} & 12$^{th}$ Board, \textsc{CBSE} Board                    &   91.4\% \\
+    \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board                    &   91.4\% \\
                        & \normalsize\textbf{The Emerald Heights International School}, Indore\\
 
-    \textsc{Jul 2011} & 10$^{th}$ Board, \textsc{ICSE} Board                    &   95.4\% \\
+    \textsc{July 2011} & 10$^{th}$ Board, \textsc{ICSE} Board                    &   95.4\% \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
 
 \end{tabular}
@@ -175,8 +172,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 \itemlist {
     \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
     \textsc{Dec 2008} & FIITJEE Talent Reward Examination Scholarship \\
-    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science
-                        held at Advanced Materials Research Institute, Bhopal\\
+    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
 }
 
 
@@ -196,19 +192,18 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2012-2013}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
-                         & \footnotesize{Tutored a batch of students in ESC101 --- a core course on
-                            basic concepts of programming --- the instructor-in-charge was \textbf{Professor
-                            Sumit Ganguly}}\\
+                         & \footnotesize{Tutored a batch of four students in ESC101 --- a core course on
+                            basic concepts of programming --- the instructor-in-charge was \textbf{Professor Sumit Ganguly}}\\
     \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
-    \textsc{Jun 2010}   & Awarded \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
+    \textsc{Jun 2010}    & Earned \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
     \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
-    \textsc{2000-2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
-                           performance throughout 2nd to 12th grade. \\
-    \textsc{---} & Secured AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympiad.\\
-    \textsc{---} & Secured AIR \textbf{54 in 9th} National Science Olympiad.\\
+    \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
+                            2$^{nd}$ to 12$^{th}$ grade. \\
+    \textsc{---}         & Achieved AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympiad.\\
+    \textsc{---}         & Achieved AIR \textbf{54 in 9th} National Science Olympiad.\\
 }
 
 
@@ -219,7 +214,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \itemlist {
     \textsc{Languages} %
-            & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient), \textbf{C\#} (Efficient)\\
+            & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient), \textbf{C\#} (Efficient),
+              \textbf{C} (Proficient)\\
     \textsc{Web Dev} %
             & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
     \textsc{Tools} %
@@ -233,100 +229,98 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \section{Work Experience}
 
-\work {May-Jul 2014}
+\work {May-July 2014}
       {Research Intern at \textsc{Microsoft Research India}, Bangalore}
       {
          \begin{itemize}[leftmargin=*]
-             \item Analysed the implementations of different distributed systems and
-                 databases architectures like \textbf{Google MapReduce}, \textbf{Google FileSystem},
-                 \textbf{Google MillWheel} \textbf{Yahoo! PNUTS}, \textbf{Amazon DynamoDB}, \textbf{Apache
-                 Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop}, \textbf{Apache Storm},
-                 \textbf{Microsoft Dryad}, and \textbf{Microsoft DryadLINQ}
-             \item CScale provides a declarative distributed systems programming
-                 model using LINQ. A programmer with no distributed system
-                 experience can specify the computation intent in LINQ and
-                 CScale handles scaling the system and fault tolerance.
-             \item Optimized \textbf{CScale for concurrency} using \textbf{TPL
-                     Dataflow}.
-             \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to
-                 implement concurrent pipeline processing of messages.
-             \item Designed and implemented a dataflow pipeline for processing
-                 partially ordered messages in order to create a new totally
-                 ordered sequence.
-             \item Performed \textbf{performance testing} of the concurrency optimizations
-                 in real world scenarios leading a gain in processing time.
-             \item Performed \textbf{failure testing} of the Programming model
-                 to uncover detrimental replication errors.
+             \item CScale provides a declarative distributed systems programming model using LINQ. A programmer with no distributed system
+                 experience can specify the computation intent in LINQ and CScale handles scaling the system and fault tolerance.
+             \item Analysed the implementations of different distributed systems and databases architectures like
+                 \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
+                 \textbf{Amazon DynamoDB}, \textbf{Apache Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop}, \textbf{Apache Storm},
+                 \textbf{Microsoft Dryad}, and \textbf{Microsoft DryadLINQ} to understand the design decisions involved.
+             \item Designed and implemented using \textbf{TPL Dataflow} and \textbf{Asynchronous Tasks}, a dataflow pipeline for
+                 processing partially ordered messages in order to create a new totally ordered sequence.
+             \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline processing of messages in
+                 CScale to preserve processing order of partially ordered messages.
+             \item Performed \textbf{performance testing} of the concurrency optimizations in real world scenarios leading to a gain in processing time.
+             \item Performed \textbf{failure testing} of the existing infrastructure and debugged detrimental replication errors in the
+                 existing infrastructure.
          \end{itemize}
      }
 
-\work {May-Jul 2013}
+\work {May-July 2013}
       {Software Development at \textsc{Aurus Networks'}, Bangalore}
       {
           \begin{itemize}[leftmargin=*]
-              \item Worked on \textbf{Aurus Networks} private MOOC offering \textbf{CourseHub}.
-              \item Ported the legacy flash based web player to a technology
-                  agnostic \textbf{HTML5/JavaScript} web player leading to a
-                  uniform cross-platform viewing experience.
-              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using the existing
-                  Jabber framework, for conversations during live lectures.
+              \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks' MOOC offering --- to a technology agnostic
+                  \textbf{HTML5/JavaScript} web player leading to a uniform cross-platform viewing experience.
+              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework, for conversations during live lectures.
+              \item Engineered an extensible Jabber framework for real-time communications between different services.
           \end{itemize}
       }
 
 %----------------------------------------------------------------------------------------
 %  COURSE PROJECTS
 %----------------------------------------------------------------------------------------
-\section{Course Projects}
+ \section{Course Projects}
+ \let\thefootnote\relax\footnote{Monsoon semester: July to November}
+ \let\thefootnote\relax\footnote{Winter Semester: January to April}
 
-\lproject {Monsoon 2014}
+\lproject {Monsoon 2014-2015}
           {Multi Factor Authentication in OpenVPN}
           {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item One of the eleven projects selected as a part of Mozilla's Winter of Security Initiative 2014.
-                  \item The objective of the project is to implement true arbitrary multi factor authentication support in
-                      OpenVPN; and to implement session-support for the second factor.
+                  \item One of the eleven projects to be selected as a part of Mozilla's Winter of Security Initiative 2014.
+                  \item The objective of the project is to implement true arbitrary multi-factor authentication support in
+                      OpenVPN; and to implement session-support for the additional factors.
                   \item \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}%
                       {https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}
               \end{itemize}
           }
 
-\lproject {Winter 2014}
+\lproject {Winter 2013-2014}
           {JavaScript to MIPS Compiler}
           {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Implemented an end-to-end compiler to compile ECMAScript5.1 to machine code for MIPS, in Python.
+                  \item Implemented an end-to-end compiler for an ECMAScript 5.1 based language to compile to MIPS
+                      architecture, in Python.
                   \item Abstracted the compiler into modules corresponding to lexing, parsing, three address code generation
                       and machine code generation to provide a flexible compiler architecture.
                   \item Designed a standard library to handle printing of different data types.
-                  \item Implemented functional programming concepts and recursion.
                   \item Circumvented runtime support by implementing static types and type annotations.
+                  \item Implemented first class functions, anonymous functions, nested function scopes and recursion.
+                  \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+                      functions. anonymous functions, static types, type annotations, recursion and nested functions.
                   \item \href{https://github.com/srijanshetty/javascript-compiler} {https://github.com/srijanshetty/javascript-compiler}
               \end{itemize}
           }
 
-\lproject {Winter 2014}
+\lproject {Winter 2013-2014}
           {Hindi author attribution}
           {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
           {
              \begin{itemize}[leftmargin=0.5cm]
+                 \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
+                     Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
+                 \item Selected as one of the top seven projects at the end of the term.
                  \item Generated a Hindi literature corpus consisting of works by Rabindranath Tagore,
                      Vibhuti Narayan, Premchand, Sarat Chandra Chattopadhyay and Dhamarvir Bharati.
+                 \item Used Unigrams, Bigrams and Trigrams as features for clustering.
                  \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
                      F-scores in the range of 90-97\% for each author.
                  \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function
                      and achieved an F-score of 90--95\% for each author.
-                 \item Unigrams, Bigrams and Trigrams were used as features for clustering.
                  \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
                      collocations; there was no appreciable difference in the results with the F-scores increasing only
                      marginally.
-                 \item The inherent difficult in the project was the unavailability of stemmers and POS taggers for Hindi.
                  \item \href{https://github.com/srijanshetty/author-attribution}{https://github.com/srijanshetty/author-attribution}
              \end{itemize}
          }
 
-\lproject {Monsoon 2013}
+\lproject {Monsoon 2013-2014}
           {NachOS}
           {\textsc{Operating Systems}, Professor Mainak Chaudhari}
           {
@@ -334,88 +328,112 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                  \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
                      Join, Yield, Sleep and Exit.
                      \href{https://github.com/srijanshetty/nachos-syscalls/}{https://github.com/srijanshetty/nachos-syscalls/}
-                 \item Assessed the performance different Process scheduling algorithms: UNIX Scheduling, First in First Out,
-                     Round Robin, Shortest Job First and Non-pre-emptive job scheduling.
+                 \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
+                     Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
                      \href{https://github.com/srijanshetty/nachos-scheduling}{https://github.com/srijanshetty/nachos-scheduling}
-                 \item Evaluated the performance of different page replacement algorithms: Random Page Allocation, First in First Out,
-                     Least Recently Used(LRU) and LRU Clock.
+                 \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
+                     Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
                      \href{https://github.com/srijanshetty/nachos-final/}{https://github.com/srijanshetty/nachos-final/}
               \end{itemize}
           }
 
-\lproject {Monsoon 2013}
+\lproject {Monsoon 2013-2014}
           {P2P File Sharing and Streaming}
           {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
           {
              \begin{itemize}[leftmargin=0.5cm]
-                 \item Conceived a protocol for peer-to-peer based file and media transfer.
+                 \item Conceived a protocol for peer-to-peer file and media transfer.
                  \item Implemented the designed protocol to create a CLI agent for the same.
                  \item Leveraged Node.js to handle high number of concurrent connections.
-                  \item \href{https://github.com/srijanshetty/nodesock}{https://github.com/srijanshetty/nodesock}
+                 \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
+                     data over the institute LAN.
+                 \item \href{https://github.com/srijanshetty/nodesock}{https://github.com/srijanshetty/nodesock}
              \end{itemize}
           }
 
-\lproject {Monsoon 2013}
+\lproject {Monsoon 2013-2014}
           {IP Spoofing}
           {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Generated raw Internet Protocol (IP) packets with spoofed source address.
+                  \item Generated raw Internet Protocol (IP) packets with spoofed IP address.
                   \item Exploited spoofed packets to perform Smurfing, ARP Poisoning and SYN Flooding.
                   \item Tested the implementation in a secure subnet.
+                  \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
+                      Smurfing and SYN Flooding.
               \end{itemize}
           }
 
-\lproject {Monsoon 2013}
+\lproject {Monsoon 2013-2014}
           {Prolog Shortest Paths and Erlang Traffic Server}
           {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Implemented shortest path algorithm in Prolog using Logic Programming on
-                       the Delhi Metro route.
-                   \item Implemented a simple traffic server in Erlang using message passing concurrency and
-                       tail call recursion.
+                   \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
+                   \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
                \end{itemize}
            }
 
-\lproject {Winter 2013}
+\lproject {Winter 2012-2013}
           {8-bit General Purpose Computer on a FPGA}
           {\textsc{Computer Organization}, Professor Subhajit Roy}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Designed an Instruction Set Architecture (ISA) for a 8-bit General Purpose
-                      Computer with a load-store architecture.
-                  \item Programmed a \textbf{Xilinx Spartan 3 FPGA} in System Verilog to implement
-                      the ISA.
+                  \item Designed an Instruction Set Architecture (ISA) for a 8-bit General Purpose Computer with a load-store architecture.
+                  \item Programmed a \textbf{Xilinx Spartan 3 FPGA} in System Verilog to implement the ISA.
                   \item Encoded a simple assembly language to compile to the machine code.
-                  \item Accomplished recursion, jumps and loops.
+                  \item Accomplished recursion, jumps, loops and conditionals.
+                  \item Designed and programmed a simple Instruction set Architecture (ISA) for a 8-bit General Purpose Computer with a load-store
+                      architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.
+                  \item Demonstrated recursion, looping and conditionals on the Computer by using a simple assembly language.
                   \item \href{https://github.com/srijanshetty/220\_y11} {https://github.com/srijanshetty/220\_y11}
               \end{itemize}
           }
 
-\lproject {Winter 2013}
+\lproject {Winter 2012-2013}
           {Conference Dates Web Crawler}
           {\textsc{Computing Laboratory}}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                   \item Developed a python based web crawler to crawl paper submission deadlines for a given paper
-                       and conference name.
-                   \item Quantitatively tested the advantage of Depth First Search over Bread First Search for crawling.
+                   \item Developed a python based web crawler to crawl paper submission deadlines for a given paper and conference name.
+                   \item Qualitatively tested the advantage of Depth First Search over Bread First Search for crawling.
                    \item Utilized regular expressions, BeautifulSoup and urllib to perform crawling.
+                   \item Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
+                       urllib.
                    \href{https://github.com/srijanshetty/crawler} {https://github.com/srijanshetty/crawler}
               \end{itemize}
 
           }
 
-\lproject {Monsoon 2011}
+\lproject {Monsoon 2012-2013}
+          {Batmobile}
+          {\textsc{Manufacturing Process I}, Professor Kallol Mondal}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Designed a model for the Batmobile as seen in The Dark Knight Series, in AutoCAD.
+                   \item Prototyped the design over the course of six week using meturllurgical processses.
+               \end{itemize}
+           }
+
+\lproject {Winter 2012-2013}
+          {Lawn Mower}
+          {\textsc{Manufacturing Process II}, Professor Sounak K. Choudhury}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Designed a model for a Simple Lawn Mower which could convert translatory force applied to it
+                       into rotatory motion of it's blades, in AutoCAD.
+                   \item Prototyped the design over the course of six week using mechanical processses.
+                   \item Selected as one of the top 15 projects in over 60 completed projects.
+               \end{itemize}
+           }
+
+\lproject {Monsoon 2011-2012}
           {No situation is unique and certain moral principles can be applied across all situation}
           {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Illustrated the existence of a fundamental similarity of different situations, by
-                       a gross simplification of different situations.
-                   \item Justified the use certain moral principles across all situations by leveraging the
-                       above stated hypothesis.
+                   \item Illustrated the existence of a fundamental similarity in all situtations by a gross simplification.
+                   \item Justified the use certain moral principles across all situations by leveraging the above stated hypothesis.
                \end{itemize}
            }
 
@@ -428,10 +446,10 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {OARS}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Scraped the institute academic records to create a database of all courses offered by the
-                       institute.
-                   \item Created an AngularJS based frontend search for the scraped data with a focus on ease of use
-                       and accessibility.
+                   \item Scraped the institute academic records to create a database of all courses offered by the institute.
+                   \item Created an AngularJS based frontend search for the scraped data with a focus on ease of use and accessibility.
+                   \item Scraped the institute academic records to create a database of all courses offered by the institute to create an
+                       AngularJS based course search over the existing legacy course search.
                    \item \href{https://navya.github.io/oars}{https://navya.github.io/oars}
                \end{itemize}
            }
@@ -443,6 +461,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                    \item Eased the process of creating minimalistic websites for not-so-tech-savvy students.
                    \item Provided a directly editable interface for editing websites using JavaScript and HTML5.
                    \item Enabled users to use custom themes and download the created website for personal use.
+                   \item Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website
+                       editor.
                    \item \href{http://gyph2.herokuapp.com/} {http://gyph2.herokuapp.com/}
                \end{itemize}
            }
@@ -451,9 +471,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {ShuffleRun}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Designed a web application which selects a music track from a user's music library based on his current running speed.
+                  \item Designed a web application to select a music track from a user's music library based on his current running speed.
                   \item Pitched the idea at \textbf{Yahoo! HackU 2013}.
                   \item Received an honourable mention in \textbf{Yahoo!  HackU 2013} for the created hack.
+                  \item Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed to recieve
+                      and honourable mention at \textbf{Yahoo! HackU 2013}.
                   \item \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun}
               \end{itemize}
           }
@@ -474,10 +496,12 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {GNU/Linux Exploration, Programming Club, IIT Kanpur}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Explored various facets of \textbf{GNU/Linux} like the file system, process management,
-                      memory management, shell interface etc.
+                  \item Explored various facets of \textbf{GNU/Linux} like the file system, process management, memory management,
+                      shell interface etc.
                   \item Documented all salient points for use by the freshmen of the institute.
                   \item \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
+                  \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system, process management, memory management,
+                      shell interface etc to serve as a reference for the Student Community.
               \end{itemize}
           }
 
@@ -494,7 +518,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                          \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
                      \item \textbf{Custom}: handy configurations and shortcuts for ZSH
                          \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
-                     \item \textbf{Notes}: notes on various computing concepts
+                     \item \textbf{Notes}: notes on computing and social sciences.
                          \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
                  \end{itemize}
              }
@@ -507,7 +531,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                      \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
                          \href{http://www.iitk.ac.in/hall5} {http://www.iitk.ac.in/hall5}
                      \item \textbf{ALI}: Antaragni Leadership Initiative.
-                         \href{www.antargni.in/ali} {www.antargni.in/ali}
+                         \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
                  \end{itemize}
              }
 
@@ -525,7 +549,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                    \begin{itemize}[leftmargin=0.5cm]
                        \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
                        \item Promoted the FOSS initiative in campus by organizing student lectures and meet-ups.
-                       \item Created student-centric applications like Course Search and Student Search, to circumvent
+                       \item Built student-centric applications like Course Search and Student Search, to circumvent
                            their legacy institute counterparts.
                        \item \href{https://github.com/navya} {https://github.com/navya}
                    \end{itemize}
@@ -535,32 +559,38 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {Head, Major Events and Competitions, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Organized Mr. \& Ms. Fresher's competition for the first time in IIT Kanpur.
-                   \item Worked alongside the Creative team to promote Antaragni through our Social Media Campaign
-                       and Social Campaign which focussed on road safety.
+                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad,
+                        Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow,
+                        Kolkata, and Kanpur.
+                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other
+                        non-monetary incentives to the outstanding cultural performers in Antaragni under the banner
+                        of \textbf{Dream On} campaign.
+                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
+                        thousand volunteers.
+                    \item Oversaw the hospitality arrangements of the 1800 participants.
+                    \item Initiated and organized Mr. \& Ms. Fresher's competition as an Antaragni Initiative for the freshmen.
+                    \item Introduced Chreo Nite to the arsenal of competitions held in Antaragni.
+                    \item Promoted Road Safety as a part of the social campaign of Antaragni -- Zara Sambhal Ke by conducting
+                        public polls and spreading general awarness about the same.
+                    \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
           }
 
-\iproject {2013}
+\iproject {2013 -- 2014}
           {Hospitality Coordinator, Antaragni '13}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Transformed the methodology of inviting colleges all around the country by focussing on
-                       calling college societies rather than the cultural union.
-                   \item Worked with a team of five fellow coordinators in planning the accommodation of 1500 participating students
-                       from all over the country.
-                   \item Chalked out the logistics for the hospitality of \textbf{1500 students} who
-                       participated in festival.
-                   \item Chalked out the logistics of the hospitality and accommodation of \textbf{1500 students} who
-                       participated in the festival with my fellow coordinators.
-                   \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the
-                       festival.
+                   \item Overhauled the methodology of inviting colleges all around the country by calling college societies over college cultural unions.
+                   \item Worked with a team of five fellow coordinators in planning the accommodation of 1500 participants.
+                   \item Charted the logistics for the hospitality of \textbf{1500 participants}.
+                   \item Chalked out the logistics of the hospitality and accommodation of \textbf{1500 participants} with my fellow coordinators.
+                   \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the festival.
                    \item Handled security during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
                \end{itemize}
           }
 
 \iproject {2013 -- 2014}
-{Member, Gymkhana Review Committee (GRC)}
+          {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
@@ -574,16 +604,37 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
        {Editor-in-chief, Vox Populi, the campus newsletter.}
 
 \skill {2012 -- 2013}
+       {Webmaster, Hall 5}
+
+\skill {2012 -- 2013}
        {Senator, Students' Senate, IITK Y11 batch.}
 
 \skill {2012 -- 2013}
        {Secretary, English Literary Society}
+
+\skill {2012 -- 2013}
+       {Secretary, Hospitality Cell, Antaragni '12}
+
+\skill {2011 -- 2012}
+       {Volunteer, Hospitality Cell, Antaragni '11}
+
+\skill {2011 -- 2012}
+       {3$^{rd}$ prize, Essay Writing Competition, Spectrum '11}
 
 \skill {2010 -- 2011}
        {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
 
 \skill {2009}
        {Qualified for the semi-finals of \textbf{Outlook SpeakOut Debate}.}
+
+\skill {2007 -- 2008}
+       {Class Prefect, Ninth Grade.}
+
+\skill {2005 -- 2006}
+       {House Captain, Einstein House.}
+
+\skill {2000 -- 2001}
+       {Class Prefect, Second Grade.}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
@@ -595,12 +646,12 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {Member, Institute Anti Ragging Committee}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Appointed as a member of the Institute Anti Ragging Committee, a ten member committee responsible
-                       for welfare of the freshmen.
+                   \item Appointed as a member of the Institute Anti Ragging Committee, a 10 member committee responsible
+                       for welfare of the newly admitted freshmen.
                    \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
                        on easing the transition of freshmen to college life.
-                   \item Ensured the institute norms regarding humane treatment of freshmen are properly conveyed to
-                       senior batches.
+                   \item Ensured institute norms regarding humane treatment of freshmen are properly conveyed to all senior batches
+                       and worked towards the enforcement of those norms.
                \end{itemize}
           }
 
@@ -609,12 +660,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {Professor Bhaskar Das Gupta}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item A brainchild of \textbf{Professor Bhaskar Das Gupta}, English Proficiency
-                       Programme tries to impart a functional knowledge of English to students.
-                   \item Worked as a English tutor in the pilot programme which was aimed at helping
-                       under-privileged students from and around IIT Kanpur campus.
-                   \item Helped in organizing the second phase of the programme, aimed at school teachers
-                       by meetings principals from schools in and around IIT Kanpur.
+                   \item A brainchild of \textbf{Professor Bhaskar Das Gupta}, English Proficiency Programme tries to impart a functional
+                       knowledge of English to students.
+                   \item Worked as a English tutor in the pilot programme to help under-privileged students from and around IIT Kanpur campus.
+                   \item Organized the second phase of the programme, aimed at school teachers by meetings principals from schools in and
+                       around IIT Kanpur.
                \end{itemize}
           }
 
@@ -633,11 +683,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {Social Initiative, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Organized a blood donation camp for the residents of campus.
+                   \item Organized a blood donation camp for the residents of IIT Kanpur.
                    \item Mobilized information about road safety through posters, infographics and questionnaires
                        via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
                    \item Organized a Respect March on the 15$^{th}$ of August in honour of the sacrifices made by our
-                       freedom fighters and to instil patriotism in the campus residents.
+                       freedom fighters and to instil patriotism in the residents of IIT Kanpur.
                \end{itemize}
           }
 
